simple error fixes

--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -11,7 +11,7 @@ class: left
 
 * Rust is a programming language that helps you write faster, more reliable software
 
-* Provides High-level ergonomics and low-level control
+* Provides high-level ergonomics and low-level control
 
 * Balancing powerful technical capacity and a great developer experience
 
