--- a/static/md/1.2_Hello_World.md
+++ b/static/md/1.2_Hello_World.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 1.2
@@ -6,6 +5,7 @@ class: middle, center
 # Hello, World!
 
 ---
+
 class: left
 
 # First program
@@ -36,13 +36,14 @@ Hello, world!
 ```
 
 ---
+
 class: left
 
 # Anatomy of a Rust Program
 
 ```rust
 fn main() {
-  
+
 }
 ```
 
@@ -50,11 +51,12 @@ fn main() {
 
 * `main` function inside **main.rs** is the first code that is run
 
-* parameters are provided inside `()`
+* Parameters are provided inside `()`
 
-* function body is wrapped in `{}`
+* Function body is wrapped in `{}`
 
 ---
+
 class: left
 
 # Anatomy of a Rust Program
@@ -69,66 +71,70 @@ println!("Hello, world!");
 
 * `"Hello, World!"` is a string literal
 
-* line ends with a `;`
+* Line ends with a semicolon `;`
 
 ---
+
 class: left
 
 # Compiling and Running Are Separate Steps
 
 Rust is a ahead of time compiled language
 
-* Compiles the program
+```bash
+$ rustc main.rs
+```
 
-  ```bash
-  $ rustc main.rs
-  ```
+Compiles the program
 
-* Run the program 
+```bash
+$ ./main
+```
 
-  ```bash
-  $ ./main
-  ```
+Runs the program
 
 ---
+
 class: left
 
 # Hello, Cargo!
 
-```bash
-$ cargo --version
-```
+* Rust’s build system and package manager
 
-* Cargo takes care of 
+* Cargo takes care of
 
   * Creating projects
 
-  * building your code 
+  * building your code
 
-  * downloading the libraries your code depends on
-
-  * building those libraries
-
-* libraries in Rust are called **crates**
+  * downloading the libraries your code depends on and building those libraries
 
 * Installed along with Rust
 
+  ```bash
+  $ cargo --version
+  ```
+
+* Libraries or packages of Rust code are called **crates**
+
 ---
+
 class: left
 
-# Creating a project 
+# Creating a project
 
 ```bash
 $ cargo new hello_cargo --bin
 ```
 
-* **--bin** : Will create an executable application
+**--bin** : Will create an executable application
 
-* **--lib** : Will create a library
+**--lib** : Will create a library
 
-* Its a convention to use snake_case for crate names
+**convention :** Use snake_case for crate names
 
 ---
+
 class: left
 
 # Folder structure
@@ -141,13 +147,13 @@ class: left
 
 * All the source code lives inside the `src` folder
 
-  * main.rs will have a **hello world** example 
+  * `main.rs` will have a **hello world** example
 
-        ```rust
-        fn main() {
-          println!("Hello, world!");
-        }
-        ```
+    ```rust
+    fn main() {
+      println!("Hello, world!");
+    }
+    ```
 
 * `Cargo.toml` contains the configuration
 
@@ -156,6 +162,7 @@ class: left
   * Change it by using the **--vcs** flag
 
 ---
+
 class: left
 
 # Cargo.toml
@@ -169,24 +176,26 @@ authors = ["Your Name <you@example.com>"]
 [dependencies]
 ```
 
-* TOML is used as Cargo’s configuration format
+* **TOML** is used as Cargo’s configuration format
 
-* [package] lists the name, version, author and other package information
+* [package] lists the name, version, author and other package **metadata**
 
-* [dependencies] list all the other crates the project depends on
+* [dependencies] list all the other **crates** the project depends on
 
 ---
+
 class: left
 
-# Building 
+# Building
 
 ```bash
 $ cargo build
 ```
 
-output is generated in the target/debug directory on build
+Output is generated in the target/debug directory on build
 
 ---
+
 class: left
 
 # Building and Running a project using cargo
@@ -196,17 +205,19 @@ class: left
 ```bash
 $ ./target/debug/hello_cargo
 ```
+
 * Using Cargo
 
 ```bash
 $ cargo run
 ```
 
-* Cargo will rebuild if code is modified 
+* Cargo will rebuild if code is modified or
 
-* or just run the output
+* Just run the output
 
 ---
+
 class: left
 
 # Checking the project
@@ -217,10 +228,11 @@ $ cargo check
 
 * Quickly check your code to make sure that it compiles
 
-* Cargo check is faster than cargo build, because it skips the step of 
+* Cargo check is faster than cargo build, because it skips the step of
   producing the executable
 
 ---
+
 class: left
 
 # Building for Release
@@ -229,15 +241,16 @@ class: left
 $ cargo build --release
 ```
 
-* To compile your project with optimizations
+* To compile your project with **optimizations**
 
-* optimizations make Rust code run faster
+* Optimizations make Rust code run faster
 
 * But, takes longer to compile
 
 * Creates an executable in target/**release** instead of target/**debug**
 
 ---
+
 class: left
 
 # Cargo as Convention
@@ -253,11 +266,12 @@ $ cargo build
 ```
 
 ---
+
 class: left
 
 # Summary
 
-* `println!("Hello, world!");` 
+* `println!("Hello, world!");` prints `Hello, world!` to screen
 
 * Libraries are called **crates**
 
