--- a/static/md/1.3_How_Rust_is_Made_and_Nightly_Rust.md
+++ b/static/md/1.3_How_Rust_is_Made_and_Nightly_Rust.md
@@ -12,7 +12,7 @@ class: left
 
 * Balance **stability** and **feature implementation**
 
-* Moto is “stability without stagnation” 
+* Moto is _“stability without stagnation”_
 
 ---
 class: left
@@ -23,13 +23,13 @@ class: left
 
 * release channels
 
-  * Nightly : Every night a new rust version is released
+  * **Nightly** : Every night a new rust version is released
 
-  * Beta : Every six weeks the Nightly release is made beta
+  * **Beta** : Every six weeks the Nightly release is made beta
 
-  * Stable : Every six weeks a stable version is released too
+  * **Stable** : Every six weeks a stable version is released too
 
-* Also called as train model
+* Called as train model
 
 ---
 class: left
