--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -41,9 +41,9 @@ fn main() {
 The total no of pigs are: 5
 ```
 
-* As per convention, use all upper case with underscores between words
+Valid for the entire run of the program in the defined scope
 
-* Valid for the entire run of the program in the defined scope
+**convention:** Use all upper case with underscores between words
 
 ---
 class: left
@@ -91,7 +91,7 @@ The value of x is: 5
 The value of x is: 6
 ```
 
-* `mut` will let you change the value not the type
+`mut` will let you change the value not the type
 
 ---
 class: left
@@ -126,7 +126,7 @@ fn main() {
 ```
 
 When declaring a new variable using `let` with the same name as the old variable, 
-the new variable is shadowing the old one.
+the new variable is shadowing the old one
 
   * It helps perform transformations on immutable variables
 
