minor formatting changes

--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -5,19 +5,24 @@ class: middle, center
 # Introduction
 
 ---
+
 class: left
 
 # The Rust Programming Language
 
-* Rust is a programming language that helps you write faster, more reliable software
+* Rust is a programming language that helps you write faster, more reliable
+  software
 
 * Provides high-level ergonomics and low-level control
 
 * Balancing powerful technical capacity and a great developer experience
 
 ---
+
 class: left
 
 # Summary
 
-* Welcome to learning Rust!
+* Welcome to rust-lang-gist!
+
+* Enjoy learning Rust
