--- a/static/md/1.2_Hello_World.md
+++ b/static/md/1.2_Hello_World.md
@@ -81,17 +81,17 @@ class: left
 
 Rust is a ahead of time compiled language
 
+To compile the program...
+
 ```bash
 $ rustc main.rs
 ```
 
-Compiles the program
+To run the program...
 
 ```bash
 $ ./main
 ```
-
-Runs the program
 
 ---
 
@@ -99,15 +99,15 @@ class: left
 
 # Hello, Cargo!
 
-* Rust’s build system and package manager
+* Cargo is Rust’s build system and package manager
 
 * Cargo takes care of
 
   * Creating projects
 
-  * building your code
+  * Building your code
 
-  * downloading the libraries your code depends on and building those libraries
+  * Downloading the libraries your code depends on and building those libraries
 
 * Installed along with Rust
 
@@ -178,9 +178,9 @@ authors = ["Your Name <you@example.com>"]
 
 * **TOML** is used as Cargo’s configuration format
 
-* [package] lists the name, version, author and other package **metadata**
+* **[package]** lists the name, version, author and other package **metadata**
 
-* [dependencies] list all the other **crates** the project depends on
+* **[dependencies]** list all the other **crates** the project depends on
 
 ---
 
@@ -228,8 +228,9 @@ $ cargo check
 
 * Quickly check your code to make sure that it compiles
 
-* Cargo check is faster than cargo build, because it skips the step of
-  producing the executable
+* It skips the step of producing the executable
+
+* Cargo check is faster than cargo build
 
 ---
 
@@ -273,6 +274,6 @@ class: left
 
 * `println!("Hello, world!");` prints `Hello, world!` to screen
 
-* Libraries are called **crates**
-
 * **cargo** is the build tool and package manager
+
+* Libraries are called **crates**
