--- a/static/md/3.3_How_Funcitons_Work.md
+++ b/static/md/3.3_How_Funcitons_Work.md
@@ -1,9 +1,11 @@
 class: middle, center
 
 ### 3.3
+
 # How Functions Work
 
 ---
+
 class: left
 
 # Functions
@@ -24,9 +26,11 @@ fn another_function() {
 
 * `snake_case` is the convention for function names
 
-* You can access functions above their declaration
+* You can access functions above their declaration, Rust dosen't care where your
+  functions are declared
 
 ---
+
 class: left
 
 # Function Parameters
@@ -45,69 +49,76 @@ fn another_function(x: i32) {
 
 * `x: i32` declare parameter with type
 
-* Separate multiple parameter declarations with commas
+* Multiple parameter declarations are Separated with commas
 
 ---
+
 class: left
 
 # Statements
 
 Instructions that perform some action and do not return a value
 
-* `let y = 6;`  is a statement
+* `let y = 6;` is a statement
 
-* You can't `let x = (let y = 6);` because `(let y = 6);` is a statement, 
-  dosen't return any value
+* You can't `let x = (let y = 6);`
+
+* `(let y = 6);` is a statement, dosen't return any value
 
 ---
+
 class: left
 
 # Expressions
 
 Instructions that return a value
 
-* Expressions allways evaluate to a resulting value
+* Expressions always evaluate to a resulting value
 
 * `5 + 6` is an expression
 
-* In `let y = 6;`  6 is an expression
+* In `let y = 6;` `6` is an expression resulting in the value `6`
 
 * Calling a function, macro and new scopes `{}` are expressions
 
 ---
+
 class: left
 
 # Statements and Expressions
 
-* Adding a semicolon to the end of an expression, makes it a statement
-
-<!-- give more examples and variations -->
+Adding a semicolon to the end of an expression, makes it a statement
 
 ---
+
 class: left
 
 # Functions with Return Values
 
 * Functions can return values
 
-* We declare their type after an arrow `->`
+* We declare their type after an arrow `-> i32`
 
 * Return type is synonymous with the value of the final expression
 
-* Return early using `return` keyword or last expression implicitly
+* Return early using `return` keyword or last expression is returned implicitly
 
-* Functions that dosen't return anything returns empty tuple `()`
+**convention :** The official style is **"return is only for early returns"**
+
+* Functions that dosen't return anything explicityly returns empty tuple `()`
 
 ---
+
 class: left
 
 # macros
 
-* Macros unlike functions end with an `!`
+* Macros unlike functions end with an exclamation `!`
 
 * Macros expand at compile time to more complex function calls
 
 ---
+
 class: left
 
 # Example 1
@@ -121,6 +132,7 @@ fn five() -> i32 {
 * 5 is the last expression and it is returned implicitly
 
 ---
+
 class: left
 
 # Example 2
@@ -146,19 +158,21 @@ error[E0308]: mismatched types
              found type `()`
 ```
 
-* expect the return type `i32`
+* Expect the return type `i32`
 
 * `x+1` evaluates to an expression and give an `i32` but `;` makes it a statement
-  and returns an empty tuple `()`
 
-* panics with `mismatched types` error.
+* Since nothing is explicitly returned an empty tuple `()` is returned
+
+* Panics with `mismatched types` error.
 
 ---
+
 class: left
 
 # Summary
 
-* `main` is the entry point 
+* `main` is the entry point
 
 * `fn` declares a function
 
