--- a/static/md/3.4_Comments.md
+++ b/static/md/3.4_Comments.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 3.4
@@ -6,29 +5,35 @@ class: middle, center
 # Comments
 
 ---
+
 class: left
 
 # Single Line Comment
 
-* Starts with // and continue till End of Line
+* Starts with // and continue till end of Line
 
 ---
+
 class: left
 
 # Block Comment
 
 * Supports multi line comments with `/*` and `*/`
 
-* But, it's still idiomatic to use //
+* But, it's still idiomatic to use `//`
 
 ---
+
 class: left
 
 # Documentation Comment
 
-* Supports doc comments with `///` 
+* Supports doc comments with `///`
+
+* Renders documentation by converting it to html
 
 ---
+
 class: left
 
 # Convention
@@ -40,18 +45,19 @@ class: left
 let lucky_number = 7;
 ```
 
-* over this... 
+* over this...
 
 ```rust
 let lucky_number = 7; // I’m feeling lucky today.
-```      
+```
 
 ---
+
 class: left
 
 # Summary
 
-* `//` comments for single line 
+* `//` comments for single line
 
 * `//` for block comments as well instead of `/* */`
 
