--- a/static/md/3.5_Control_Flow.md
+++ b/static/md/3.5_Control_Flow.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 3.5
@@ -6,6 +5,7 @@ class: middle, center
 # Control Flow
 
 ---
+
 class: left
 
 # `if` Expressions
@@ -21,15 +21,16 @@ fn main() {
 }
 ```
 
-* Starts with **if** keyword
+* Starts with `if` keyword
 
 * Follwed by condition, which should evaluate to boolean
 
 * Rust won't convert non boolean types to booleans
 
-* block of code in **{}** called **arms** is executed based on condition
+* Block of code in `{}` called **arms** is executed based on condition
 
 ---
+
 class: left
 
 # `else` expression
@@ -45,6 +46,7 @@ evalutes if the **if expression** condition is false
 ```
 
 ---
+
 class: left
 
 # `else if` expression
@@ -62,35 +64,35 @@ Multiple conditions with **else if**
 ```
 
 ---
+
 class: left
 
 # Using `if` in a `let` statement
 
-* `if` is an expression
-
-* We can use it in a statement and assign to a variable
+We can use if in a statement and assign the value to a variable
 
 ```rust
 let number = if condition {
-  5 
+  5
 } else {
-  6 
-} 
+  6
+};
 ```
 
-* Arms of the if expressions should be of the same type
+Arms of the if expressions should be of the same type
 
 ```rust
 let number = if condition {
   5 // integer
 } else {
-  "six" // string literal 
+  "six" // string literal
 }
 ```
 
-* An `if` without an `else` always returns an empty tuple `()`
+An `if` without an `else` always returns an empty tuple `()`
 
 ---
+
 class: left
 
 # Repetition with Loops
@@ -100,6 +102,7 @@ class: left
 * They are three types...**loop**, **while** and **for**
 
 ---
+
 class: left
 
 # Loop
@@ -114,15 +117,16 @@ fn main() {
 }
 ```
 
-Cancel with 
+Cancel with
 
-  * `ctrl+c` 
-  
-  or 
+* `ctrl+c`
 
-  * `break` keyword for stopping gracefully
+or
+
+* `break` keyword for stopping gracefully
 
 ---
+
 class: left
 
 # While
@@ -144,47 +148,51 @@ fn main() {
 ```
 
 ---
+
 class: left
 
 # For
 
-* Loop over the elements of a collection, such as an array
+Loop over the elements of a collection, such as
 
-```rust
-fn main() {
-  let a = [10, 20, 30, 40, 50];
-  for element in a.iter() {
-      println!("the value is: {}", element);
+* an array
+
+  ```rust
+  fn main() {
+    let a = [10, 20, 30, 40, 50];
+    for element in a.iter() {
+        println!("the value is: {}", element);
+    }
   }
-}
-```
+  ```
 
-* or a range
+* a range
 
-```rust
-fn main() {
-  for number in (1..4) {
-      println!("{}!", number);
+  ```rust
+  fn main() {
+    for number in (1..4) {
+        println!("{}!", number);
+    }
+    println!("LIFTOFF!!!");
   }
-  println!("LIFTOFF!!!");
-}
-```
+  ```
 
 ---
+
 class: left
 
 # Summary
 
-* **if** and **else if** expression should have condition which evaluates to 
+* **if** and **else if** expression should have condition which evaluates to
   boolean
 
-* Blocks of code in `{}` called **arms** are executed based on the condition 
+* Blocks of code in `{}` called **arms** are executed based on the condition
   value and all the arms should be of same type
 
 * **if** can be used in a statement and assigned to a variable
 
-* **loop** executes for ever untill **break**
+* **loop** executes for ever, untill **break** statement
 
 * **while** executes untill the condition is true
 
-* **for** executes for each element in the Arrary or range
+* **for** executes for each element in the collection
