--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 4.1
@@ -6,6 +5,7 @@ class: middle, center
 # Ownership
 
 ---
+
 class: left
 
 # Memory
@@ -19,11 +19,12 @@ class: left
   * heap
 
 ---
+
 class: left
 
-# Stack 
+# Stack
 
-* Stack stores values in the order it gets and removes in the opposite order
+* Stack stores values in the order it gets and removes it in the opposite order
 
 * This is referred to as, last in first out (LIFO)
 
@@ -38,60 +39,63 @@ class: left
 * Fast, because of the way it accesses data
 
 ---
+
 class: left
 
 # Heap
 
-* On requesting, OS will find a space, mark it as use and then returns the address
+* On requesting, OS will find a space, mark it as used and then returns the
+  address
 
 * Address is the `Pointer`
 
 * Heap is less organized
 
-* Data is of varied sizes
+* Data can be of varied sizes
 
 * Large data takes more time to allocate
 
-* Process of allocating memory is called `allocation on the heap` or simply 
+* Process of allocating memory is called `allocation on the heap` or simply
   `allocation`
-
-<!-- ** deallocation ?  -->
 
 * Slow, because we have to follow a pointer to access memory
 
 ---
+
 class: left
 
 # Memory Management
 
 Different styles of memory management...
 
-* **Garbage collection**, a program that constantly looks for unused memory and 
+* **Garbage collection**, a program that constantly looks for unused memory and
   cleans at run-time
 
 * **Manual**, programmer must explicitly allocate and free the memory
 
-* Follow a set of **ownership rules**, that the compiler checks at compile time 
-  with no run-time cost
+* **ownership rules** Follow a set of rules, that the compiler checks at compile
+  time with no run-time cost
 
 Rust falls under the third category
 
 ---
+
 class: left
 
 # Ownership
 
-Ownership defines a set of rules which takes care of 
+Ownership defines a set of rules which takes care of...
 
-  * keeping track of what parts of code are using what data on the heap
+  * Keeping track of what parts of code is using what data on the heap
 
-  * minimizing the amount of duplicate data
+  * Minimizing the amount of duplicate data
 
-  * cleaning up unused data
+  * Cleaning up unused data
 
 No need to think of stack and heap once you start following ownership rules
 
 ---
+
 class: left
 
 # Ownership Rules
@@ -103,89 +107,113 @@ class: left
 * When the owner goes **out of scope**, the value will be **dropped**
 
 ---
+
 class: left
 
 # Variable Scope
 
+A scope is the range within a program for which an item is valid
+
+Rust is a block scoped language and is delimited by `{ }`
+
 ```rust
-{                      
-                      // s is not valid here, it’s not yet declared
-  let s = "hello";   // s is valid from this point forward
+{
+  // s is not valid here, it’s not yet declared
+  // s is valid from this point forward
+  let s = "hello";
   // do stuff with s
-}                      // this scope is now over, and s is no longer valid
-println!("{}", s) // throws an error, s is no longer available
+} // this scope is now over, and s is no longer valid
+// throws an error, s is no longer available
+println!("{}", s)
 ```
 
 Important points in time...
 
-  * When `s` comes into scope, it is valid
+* When `s` comes into scope, it is valid
 
-  * It remains so until it goes out of scope
+* It remains so until it goes out of scope
 
 ---
+
 class: left
 
-# String vs str (string literal) 
+# String vs str (string literal)
 
-* str (string literal) -  text is hardcoded directly into the final executable
+```rust
+let a = "str";
+```
 
-  * fast and efficient to access
+* str (string literal) - Text is hardcoded directly into the final executable
 
-  * Size and contents known at compile time, immutable 
+  * Fast and efficient to access
+
+  * Size and contents known at compile time
+
+  * Immutable
+
+```rust
+let a = String::from("string");
+```
 
 * String - Allocated during run time
 
-  * written to heap, slow to allocate and access
+  * Written to heap, slow to allocate and access
 
-  * Size and contents are dynamic, mutable and growable 
+  * Size and contents are not known at compile time
+
+  * Mutable and Growable
 
 ---
+
 class: left
 
 # Memory and Allocation
 
-```rust 
+```rust
 {
-  let s = String::from("hello"); // s is valid from this point forward
+  // s is valid from this point forward
+  let s = String::from("hello");
   // do stuff with s
-}                                // this scope is now over, and s is no
-                                 // longer valid
+} // this scope is now over, and s is no longer valid
 ```
 
-* Memory allocated in heap at run time during `let mut s = String::from("hello");`
+* Memory allocated in heap at runtime
 
-* Memory is automatically returned once the variable that owns it goes out of scope
+* Memory is automatically freed once the variable that owns it goes out of scope
 
 * Rust calls a special function `drop` automatically at the closing `}`
 
 ---
+
 class: left
 
-# Ways Variables and Data Interact:
+# Ways Variables and Data Interact
 
 Variables and data interact in three ways...
 
-* Move
+  * Move
 
-* Clone
+  * Clone
 
-* Copy
+  * Copy
 
 ---
+
 class: left
 
-# Move
+## Move
 
 ```rust
 let s1 = String::from("hello");
 ```
 
-Allocate the heap for `hello` and push onto stack for the pointer, length and 
+Allocate the heap for `hello` and push onto stack for the pointer, length and
 capacity with variable s1
 
 <img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-01.svg" width="400"/>
 
 ---
+
 class: left
 
 ```rust
@@ -197,6 +225,7 @@ Copy the stack memory to the new variable s2
 <img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-02.svg" width="400"/>
 
 ---
+
 class: left
 
 ```rust
@@ -206,7 +235,7 @@ let s2 = s1;
 println!("{}, world!", s1);
 ```
 
-Invalidate s1 as both of them are pointing to the same heap because rust can't 
+Invalidate s1 as both of them are pointing to the same heap because rust can't
 decide which one to drop at the end of the scope
 
 ```rust
@@ -226,27 +255,28 @@ error[E0382]: use of moved value: `s1`
 Throws an error if you try to access after the assignement
 
 ---
+
 class: left
 
-# Clone
+## Clone
 
 ```rust
-
 let s1 = String::from("hello");
 let s2 = s1.clone();
 
 println!("s1 = {}, s2 = {}", s1, s2);
 ```
 
-* Allocate the heap for `hello` and push onto stack for the pointer, length and 
+* Allocate the heap for `hello` and push onto stack for the pointer, length and
   capacity with variable s1
 
 * Clone the stack memory and heap memory for the new variable s2
 
 ---
+
 class: left
 
-# Copy
+## Copy
 
 Happens for Stack-only data
 
@@ -267,12 +297,13 @@ let y = x;
   (i32, i32) is Copy, but (i32, String) is not
 
 ---
+
 class: left
 
 # Ownership and Functions
 
-Passing a variable to a function will move or copy, just like assignment based 
-on the type
+Passing a variable to a function will `move` or `copy`, just like assignment
+based on the type
 
 ```rust
 fn main() {
@@ -283,11 +314,11 @@ fn main() {
   makes_copy(x);      // x would move into the function,
                       // but i32 is Copy, so it’s okay to still
                       // use x afterward.
-} // Here, x goes out of scope, then s. 
+} // Here, x goes out of scope, then s.
 // But since s's value was moved, nothing
 // special happens.
 
-fn takes_ownership(some_string: String) { // some_string comes into scope.
+fn takes_ownership(some_string: String) { // some_string comes into scope
   println!("{}", some_string);
 } // Here, some_string goes out of scope and `drop` is called. The backing
 // memory is freed.
@@ -298,33 +329,40 @@ fn makes_copy(some_integer: i32) { // some_integer comes into scope.
 ```
 
 ---
+
 class: left
 
 # Return Values and Scope
 
-Returning a variable from a function will move or copy based on the type
+Returning a variable from a function will `move` or `copy` based on the type
 
 ```rust
 fn main() {
-  let s = String::from("hello");  // s comes into scope.
-  takes_ownership(s);             // s's value moves into the function...
-                                  // ... and so is no longer valid here.
-  let x = 5;                      // x comes into scope.
-  makes_copy(x);                  // x would move into the function,
-                                  // but i32 is Copy, so it’s okay to still
-                                  // use x afterward.
-} // Here, x goes out of scope, then s. But since s's value was moved, nothing
-// special happens.
-fn takes_ownership(some_string: String) { // some_string comes into scope.
-  println!("{}", some_string);
-} // Here, some_string goes out of scope and `drop` is called. The backing
-// memory is freed.
-fn makes_copy(some_integer: i32) { // some_integer comes into scope.
-  println!("{}", some_integer);
-} // Here, some_integer goes out of scope. Nothing special happens.
+    let s1 = gives_ownership();         // gives_ownership moves its return
+                                        // value into s1.
+    let s2 = String::from("hello");     // s2 comes into scope.
+    let s3 = takes_and_gives_back(s2);  // s2 is moved into
+                                        // takes_and_gives_back, which also
+                                        // moves its return value into s3.
+} // Here, s3 goes out of scope and is dropped. s2 goes out of scope but was
+  // moved, so nothing happens. s1 goes out of scope and is dropped.
+fn gives_ownership() -> String {             // gives_ownership will move its
+                                             // return value into the function
+                                             // that calls it.
+    let some_string = String::from("hello"); // some_string comes into scope.
+    some_string                              // some_string is returned and
+                                             // moves out to the calling
+                                             // function.
+}
+// takes_and_gives_back will take a String and return one.
+fn takes_and_gives_back(a_string: String) -> String { // a_string comes into
+                                                      // scope.
+    a_string  // a_string is returned and moves out to the calling function.
+}
 ```
 
 ---
+
 class: left
 
 # Passing ownership back to main function
@@ -348,6 +386,7 @@ fn calculate_length(s: String) -> (String, usize) {
 * Tedious to tranfer back all the time, use **borrowing**
 
 ---
+
 class: left
 
 # Summary
