--- a/static/md/4.2_References_and_Borrowing.md
+++ b/static/md/4.2_References_and_Borrowing.md
@@ -31,7 +31,7 @@ fn calculate_length(s: &String) -> usize {
 
 class: left
 
-# &ref
+### &ref
 
 * arguments and parameters are prepended with `&`
 
@@ -47,7 +47,7 @@ class: left
 
 # Mutable References
 
-<!-- mutable reference is borrowing -->
+* mutable reference is borrowing
 
 * Like variables, references are also immutable by default
 
@@ -70,25 +70,26 @@ class: left
 
 # The Rules of References
 
-In a particular scope...
+* References must be valid
 
-* One mutable reference, in a particular scope
+    and
 
-  or
+* In a given scope, there must be either
 
-* Any number of immutable references.
+  * One mutable reference
 
-  and
+      or
 
-* Valid references
+  * Any number of immutable reference
 
 ---
 
 class: left
 
-# One mutable reference
+### One mutable reference
 
-You can only have one mutable reference to a particular piece of data in a single scope
+You can only have one mutable reference to a particular piece of data in a
+single scope
 
 ```rust
 let mut s = String::from("hello");
@@ -108,7 +109,9 @@ let r2 = &mut s; // the previous mutable reference is already dropped
 
 class: left
 
-# Can't mix mutable and immutable references
+### Can't mix mutable and immutable references
+
+You can't have mutable and immutable references in the same scope
 
 ```rust
 let mut s = String::from("hello");
@@ -117,7 +120,7 @@ let r2 = &s; // no problem
 let r3 = &mut s; // BIG PROBLEM
 ```
 
-<!-- * even in different scopes -->
+<!-- * even in different scopes ???-->
 
 ---
 
@@ -125,13 +128,14 @@ class: left
 
 # Data Race
 
-A data race is similar to a race condition and happens when these three behaviors occur...
+A data race is similar to a race condition and happens when these three
+behaviors occur...
 
-* Two or more pointers access the same data at the same time.
+  * Two or more pointers access the same data at the same time
 
-* At least one of the pointers is being used to write to the data.
+  * At least one of the pointers is being used to write to the data
 
-* There’s no mechanism being used to synchronize access to the data.
+  * There’s no mechanism being used to synchronize access to the data
 
 Mutable references, with above characterestics prevents data race from happening
 
@@ -144,8 +148,8 @@ class: left
 * a pointer that references a location in memory that may have been given to
   someone else, by freeing some memory while preserving a pointer to that memory
 
-  * Rust guarentees that the data will not go out of scope before the reference
-    to the data does
+* Rust guarentees that the data will not go out of scope before the reference
+  to the data does
 
 ```rust
 fn main() {
@@ -158,7 +162,10 @@ fn dangle() -> &String {
 ```
 
 * s is created inside dangle and deallocated on `}`.
-* But we tried to return a reference to it, which is pointing to an invalid String!
+
+* But we tried to return a reference to it, which is pointing to an invalid
+  String!
+
 * Rust won’t let us do this.
 
 ---
