--- a/static/md/4.3_Slices.md
+++ b/static/md/4.3_Slices.md
@@ -1,4 +1,3 @@
-
 class: middle, center
 
 ### 4.3
@@ -6,22 +5,24 @@ class: middle, center
 # Slices
 
 ---
+
 class: left
 
 # Slices
 
-Slices let you reference a contiguous sequence of elements in a collection 
+Slices let you reference a contiguous sequence of elements in a collection
 rather than the whole collection
 
 ---
+
 class: left
 
 # String Slices
 
 * string[start..end]
 
-* `start..end` syntax is a range that begins at start and continues up to, but 
-  not including, end
+* `start..end` syntax is a range that begins at start and continues up to
+  but not including, end
 
 * Slice will store pointer to the staring_index and the length
 
@@ -30,9 +31,10 @@ class: left
 * `[start..len]` and `[start..]` slices till the end
 
 ---
+
 class: left
 
 # Summary
 
-* Ownership, borrowing, and slices ensure memory safety in Rust programs at 
+* Ownership, borrowing, and slices ensure memory safety in Rust programs at
   compile time
