--- a/static/md/11.0_Testing.md
+++ b/static/md/11.0_Testing.md
@@ -10,7 +10,12 @@ class: left
 
 # Writing Automated Tests
 
-> Program testing can be a very effective way to show the presence of bugs, but it is hopelessly inadequate for showing their absence - Edsger W. Dijkstra
+> Program testing can be a very effective way to show the presence of bugs, but
+  it is hopelessly inadequate for showing their absence - Edsger W. Dijkstra
+
+* Rust’s type system cannot catch every kind of incorrectness
+
+* Rust includes support for writing automated software tests within the language
 
 ---
 
