--- a/static/md/11.1_Writing_tests.md
+++ b/static/md/11.1_Writing_tests.md
@@ -8,4 +8,205 @@ class: middle, center
 
 class: left
 
+# How to Write Tests
+
+Tests are Rust functions that verify that the non-test code is functioning in
+the expected manner
+
+Test functions typically perform these three actions...
+
+  * Set up any needed data or state
+
+  * Run the code we want to test
+
+  * Assert the results are what we expect
+
+
+---
+
+class: left
+
 # Summary
+
+
+---
+
+class: left
+
+# The Anatomy of a Test Function
+
+* Test is a function that’s annotated with the `test` attribute
+
+* Attributes are metadata about pieces of Rust code
+
+* `#[test]` above `fn` makes it a test function
+
+* `cargo test` will run all the test functions and report on their status
+
+---
+
+class: left
+
+# Default test
+
+Running `cargo lib` will generate the `src/lib.rs` with the default test
+
+```rust
+#[cfg(test)]
+mod tests {
+    #[test]
+    fn it_works() {
+        assert_eq!(2 + 2, 4);
+    }
+}
+```
+
+* `#[test]` attribute denotes the test function
+
+* Can also have non-test functions in the tests module to help set up common
+  scenarios or perform common operations
+
+* `assert_eq!` macro to assert that 2 + 2 equals 4
+
+
+---
+
+class: left
+
+# Result
+
+```text
+$ cargo test
+   Compiling adder v0.1.0 (file:///projects/adder)
+    Finished dev [unoptimized + debuginfo] target(s) in 0.22 secs
+     Running target/debug/deps/adder-ce99bcc2479f4607
+
+running 1 test
+test tests::it_works ... ok
+
+test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
+
+   Doc-tests adder
+
+running 0 tests
+
+test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
+```
+
+* `Compiling`, `Finished`, and `Running` are the initial steps
+
+* `running 1 test` show the number of tests run...
+
+* `test tests::it_works ... ok` shows the test ran and the status of the test
+
+* `1 passed; 0 failed` will show the number of tests passed and failed
+
+* `0 ignored; 0 filtered` shows the ignored and filtered tests
+
+* `0 measured` shows the benchmark tests
+
+* `Doc-tests adder` shows the tests run as part of the documentation
+
+* Rust can compile any code examples that appears in our documentation
+
+* This helps the examples to stay in sync with the code
+
+---
+
+class: left
+
+# Failing tests
+
+* Each thread is run in a different thread
+
+* If any test fails, it will be reported back to the main thread
+
+```rust
+#[cfg(test)]
+mod tests {
+    #[test]
+    fn exploration() {
+        assert_eq!(2 + 2, 4);
+    }
+    #[test]
+    fn another() {
+        panic!("Make this test fail");
+    }
+}
+```
+
+---
+
+class: left
+
+# Error report
+
+```rust
+running 2 tests
+test tests::exploration ... ok
+test tests::another ... FAILED
+
+failures:
+
+---- tests::another stdout ----
+    thread 'tests::another' panicked at 'Make this test fail', src/lib.rs:10:8
+note: Run with `RUST_BACKTRACE=1` for a backtrace.
+
+failures:
+    tests::another
+
+test result: FAILED. 1 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out
+
+error: test failed
+```
+
+---
+
+class: left
+
+# Checking Results with the assert! Macro
+
+* `assert!` is a  macro, provided by the standard library
+
+* `assert!` macro takes an argument that evaluates to a Boolean
+
+* If the value is
+
+  * `true`, assert! does nothing and the test passes
+
+  * `false`, the assert! macro calls the panic! macro, which causes the test to
+    fail.
+
+* Ensure that some condition in a test evaluates to true
+
+---
+
+class: left
+
+# Testing Equality with the assert_eq! and assert_ne! Macros
+
+* WIP
+
+
+---
+
+class: left
+
+# Adding Custom Failure Messages
+
+* WIP
+
+---
+
+class: left
+
+# Checking for Panics with should_panic
+
+* WIP
+
+---
+
+class: left
+
+# Summary
+
