--- a/static/md/11.2_Running_tests.md
+++ b/static/md/11.2_Running_tests.md
@@ -8,4 +8,35 @@ class: middle, center
 
 class: left
 
+# Running Tests in Parallel or Consecutively
+
+---
+
+class: left
+
+# Showing Function Output
+
+---
+
+class: left
+
+# Running a Subset of Tests by Name
+
+---
+
+class: left
+
+# Ignoring Some Tests Unless Specifically Requested
+
+---
+
+class: left
+
+#
+
+---
+
+class: left
+
 # Summary
+
