--- a/static/md/11.3_Test_Organization.md
+++ b/static/md/11.3_Test_Organization.md
@@ -8,4 +8,46 @@ class: middle, center
 
 class: left
 
+# Unit Tests
+
+---
+
+class: left
+
+# The Tests Module and #[cfg(test)]
+
+---
+
+class: left
+
+# Testing Private Functions
+
+---
+
+class: left
+
+# Integration Tests
+
+---
+
+class: left
+
+# The tests Directory
+
+---
+
+class: left
+
+# Submodules in Integration Tests
+
+---
+
+class: left
+
+# Integration Tests for Binary Crates
+
+---
+
+class: left
+
 # Summary
